@@ -19,6 +19,7 @@ package de.gematik.idp.authentication;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.jose4j.jws.AlgorithmIdentifiers.RSA_USING_SHA256;
+
 import de.gematik.idp.crypto.model.PkiIdentity;
 import de.gematik.idp.data.UserConsentConfiguration;
 import de.gematik.idp.data.UserConsentDescriptionTexts;
@@ -45,188 +46,229 @@ import org.junit.jupiter.api.extension.ExtendWith;
 @ExtendWith(PkiKeyResolver.class)
 class AuthenticationChallengeVerifierTest {
 
-    private AuthenticationChallenge authenticationChallenge;
-    private AuthenticationChallengeBuilder authenticationChallengeBuilder;
-    private AuthenticationResponseBuilder authenticationResponseBuilder;
-    private AuthenticationChallengeVerifier authenticationChallengeVerifier;
-    private PkiIdentity clientIdentity;
-    private PkiIdentity rsaClientIdentity;
-    private PkiIdentity serverIdentity;
-    private Map<String, Map<String, String>> userConsentConfiguration;
+  static {
+    Security.removeProvider(BouncyCastleProvider.PROVIDER_NAME);
+    Security.insertProviderAt(new BouncyCastleProvider(), 1);
+  }
 
-    static {
-        Security.removeProvider(BouncyCastleProvider.PROVIDER_NAME);
-        Security.insertProviderAt(new BouncyCastleProvider(), 1);
-    }
+  private AuthenticationChallenge authenticationChallenge;
+  private AuthenticationChallengeBuilder authenticationChallengeBuilder;
+  private AuthenticationResponseBuilder authenticationResponseBuilder;
+  private AuthenticationChallengeVerifier authenticationChallengeVerifier;
+  private PkiIdentity clientIdentity;
+  private PkiIdentity rsaClientIdentity;
+  private PkiIdentity serverIdentity;
+  private Map<String, Map<String, String>> userConsentConfiguration;
 
-    @BeforeEach
-    public void init(
-        @PkiKeyResolver.Filename("1_C.SGD-HSM.AUT_oid_sgd1_hsm_ecc.p12") final PkiIdentity serverIdentity,
-        @PkiKeyResolver.Filename("109500969_X114428530_c.ch.aut-ecc.p12") final PkiIdentity clientIdentity,
-        @PkiKeyResolver.Filename("833621999741600_c.hci.aut-apo-rsa.p12") final PkiIdentity rsaClientIdentity) {
-        this.clientIdentity = clientIdentity;
-        this.serverIdentity = serverIdentity;
-        this.rsaClientIdentity = rsaClientIdentity;
-        authenticationChallengeBuilder = AuthenticationChallengeBuilder.builder()
+  @BeforeEach
+  public void init(
+      @PkiKeyResolver.Filename("1_C.SGD-HSM.AUT_oid_sgd1_hsm_ecc.p12")
+          final PkiIdentity serverIdentity,
+      @PkiKeyResolver.Filename("109500969_X114428530_c.ch.aut-ecc.p12")
+          final PkiIdentity clientIdentity,
+      @PkiKeyResolver.Filename("833621999741600_c.hci.aut-apo-rsa.p12")
+          final PkiIdentity rsaClientIdentity) {
+    this.clientIdentity = clientIdentity;
+    this.serverIdentity = serverIdentity;
+    this.rsaClientIdentity = rsaClientIdentity;
+    authenticationChallengeBuilder =
+        AuthenticationChallengeBuilder.builder()
             .serverSigner(new IdpJwtProcessor(serverIdentity))
-            .userConsentConfiguration(UserConsentConfiguration.builder()
-                .claimsToBeIncluded(Map.of(IdpScope.OPENID, List.of(),
-                    IdpScope.EREZEPT, List.of(),
-                    IdpScope.PAIRING, List.of()))
-                .descriptionTexts(UserConsentDescriptionTexts.builder()
-                    .claims(Collections.emptyMap())
-                    .scopes(Map.of(IdpScope.OPENID, "openid",
-                        IdpScope.PAIRING, "pairing",
-                        IdpScope.EREZEPT, "erezept"))
+            .userConsentConfiguration(
+                UserConsentConfiguration.builder()
+                    .claimsToBeIncluded(
+                        Map.of(
+                            IdpScope.OPENID,
+                            List.of(),
+                            IdpScope.EREZEPT,
+                            List.of(),
+                            IdpScope.PAIRING,
+                            List.of()))
+                    .descriptionTexts(
+                        UserConsentDescriptionTexts.builder()
+                            .claims(Collections.emptyMap())
+                            .scopes(
+                                Map.of(
+                                    IdpScope.OPENID,
+                                    "openid",
+                                    IdpScope.PAIRING,
+                                    "pairing",
+                                    IdpScope.EREZEPT,
+                                    "erezept"))
+                            .build())
                     .build())
-                .build())
             .build();
-        authenticationResponseBuilder = AuthenticationResponseBuilder.builder()
-            .build();
-        authenticationChallengeVerifier = AuthenticationChallengeVerifier.builder()
-            .serverIdentity(serverIdentity)
-            .build();
-        authenticationChallenge = authenticationChallengeBuilder
-            .buildAuthenticationChallenge("goo", "foo", "bar", "schmar", "openid pairing", "nonceValue");
-    }
+    authenticationResponseBuilder = AuthenticationResponseBuilder.builder().build();
+    authenticationChallengeVerifier =
+        AuthenticationChallengeVerifier.builder().serverIdentity(serverIdentity).build();
+    authenticationChallenge =
+        authenticationChallengeBuilder.buildAuthenticationChallenge(
+            "goo", "foo", "bar", "schmar", "openid pairing", "nonceValue");
+  }
 
-    @Test
-    void verifyEmptyResponse_shouldGiveException() {
-        assertThatThrownBy(() -> authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(null))
-            .isInstanceOf(RuntimeException.class);
-    }
+  @Test
+  void verifyEmptyResponse_shouldGiveException() {
+    assertThatThrownBy(
+            () -> authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(null))
+        .isInstanceOf(RuntimeException.class);
+  }
 
-    @Test
-    void verifyCorrectResponse_shouldPass() {
-        final AuthenticationResponse authenticationResponse =
-            authenticationResponseBuilder.buildResponseForChallenge(authenticationChallenge,
-                clientIdentity);
-        authenticationChallengeVerifier
-            .verifyResponseAndThrowExceptionIfFail(authenticationResponse.getSignedChallenge());
-    }
+  @Test
+  void verifyCorrectResponse_shouldPass() {
+    final AuthenticationResponse authenticationResponse =
+        authenticationResponseBuilder.buildResponseForChallenge(
+            authenticationChallenge, clientIdentity);
+    authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(
+        authenticationResponse.getSignedChallenge());
+  }
 
-    @Test
-    void extractClaims_shouldBePresent() {
-        final AuthenticationResponse authenticationResponse =
-            authenticationResponseBuilder.buildResponseForChallenge(authenticationChallenge,
-                clientIdentity);
+  @Test
+  void extractClaims_shouldBePresent() {
+    final AuthenticationResponse authenticationResponse =
+        authenticationResponseBuilder.buildResponseForChallenge(
+            authenticationChallenge, clientIdentity);
 
-        Assertions.assertThat(authenticationResponse.getSignedChallenge().getStringBodyClaim(ClaimName.NESTED_JWT)
+    Assertions.assertThat(
+            authenticationResponse
+                .getSignedChallenge()
+                .getStringBodyClaim(ClaimName.NESTED_JWT)
                 .map(Objects::toString)
                 .map(JsonWebToken::new)
-                .map(JsonWebToken::getBodyClaims).get())
-            .containsEntry("client_id", "goo")
-            .containsEntry("state", "foo")
-            .containsEntry("redirect_uri", "bar")
-            .containsEntry("code_challenge", "schmar");
-    }
+                .map(JsonWebToken::getBodyClaims)
+                .get())
+        .containsEntry("client_id", "goo")
+        .containsEntry("state", "foo")
+        .containsEntry("redirect_uri", "bar")
+        .containsEntry("code_challenge", "schmar");
+  }
 
-    @Test
-    void checkSignatureNjwt_certMismatch(
-        @PkiKeyResolver.Filename("833621999741600_c.hci.aut-apo-ecc.p12") final PkiIdentity otherServerIdentity) {
-        authenticationChallengeBuilder = AuthenticationChallengeBuilder.builder()
+  @Test
+  void checkSignatureNjwt_certMismatch(
+      @PkiKeyResolver.Filename("833621999741600_c.hci.aut-apo-ecc.p12")
+          final PkiIdentity otherServerIdentity) {
+    authenticationChallengeBuilder =
+        AuthenticationChallengeBuilder.builder()
             .serverSigner(new IdpJwtProcessor(otherServerIdentity))
-            .userConsentConfiguration(UserConsentConfiguration.builder()
-                .claimsToBeIncluded(Map.of(IdpScope.OPENID, List.of(),
-                    IdpScope.EREZEPT, List.of(),
-                    IdpScope.PAIRING, List.of()))
-                .descriptionTexts(UserConsentDescriptionTexts.builder()
-                    .claims(Collections.emptyMap())
-                    .scopes(Map.of(IdpScope.OPENID, "openid",
-                        IdpScope.PAIRING, "pairing",
-                        IdpScope.EREZEPT, "erezept"))
+            .userConsentConfiguration(
+                UserConsentConfiguration.builder()
+                    .claimsToBeIncluded(
+                        Map.of(
+                            IdpScope.OPENID,
+                            List.of(),
+                            IdpScope.EREZEPT,
+                            List.of(),
+                            IdpScope.PAIRING,
+                            List.of()))
+                    .descriptionTexts(
+                        UserConsentDescriptionTexts.builder()
+                            .claims(Collections.emptyMap())
+                            .scopes(
+                                Map.of(
+                                    IdpScope.OPENID,
+                                    "openid",
+                                    IdpScope.PAIRING,
+                                    "pairing",
+                                    IdpScope.EREZEPT,
+                                    "erezept"))
+                            .build())
                     .build())
-                .build())
             .build();
-        authenticationChallenge = authenticationChallengeBuilder
-            .buildAuthenticationChallenge("goo", "foo", "bar", "schmar", "openid e-rezept", "nonceValue");
+    authenticationChallenge =
+        authenticationChallengeBuilder.buildAuthenticationChallenge(
+            "goo", "foo", "bar", "schmar", "openid e-rezept", "nonceValue");
 
-        final AuthenticationResponse authenticationResponse =
-            authenticationResponseBuilder.buildResponseForChallenge(authenticationChallenge,
-                clientIdentity);
+    final AuthenticationResponse authenticationResponse =
+        authenticationResponseBuilder.buildResponseForChallenge(
+            authenticationChallenge, clientIdentity);
 
-        JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
-        assertThat(signedChallenge).isNotNull();
-        assertThatThrownBy(() -> authenticationChallengeVerifier
-            .verifyResponseAndThrowExceptionIfFail(signedChallenge))
-            .isInstanceOf(RuntimeException.class);
-    }
+    JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
+    assertThat(signedChallenge).isNotNull();
+    assertThatThrownBy(
+            () ->
+                authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(
+                    signedChallenge))
+        .isInstanceOf(RuntimeException.class);
+  }
 
-    @Test
-    void checkSignatureNjwt_invalidChallenge() {
-        final AuthenticationChallenge ch = AuthenticationChallenge.builder()
+  @Test
+  void checkSignatureNjwt_invalidChallenge() {
+    final AuthenticationChallenge ch =
+        AuthenticationChallenge.builder()
             .challenge(new JsonWebToken("SicherNichtDerRichtigeChallengeCode"))
             .build();
-        final AuthenticationResponse authenticationResponse =
-            authenticationResponseBuilder.buildResponseForChallenge(ch,
-                clientIdentity);
+    final AuthenticationResponse authenticationResponse =
+        authenticationResponseBuilder.buildResponseForChallenge(ch, clientIdentity);
 
-        JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
-        assertThat(signedChallenge).isNotNull();
-        assertThatThrownBy(() -> authenticationChallengeVerifier
-            .verifyResponseAndThrowExceptionIfFail(signedChallenge))
-            .isInstanceOf(RuntimeException.class);
+    JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
+    assertThat(signedChallenge).isNotNull();
+    assertThatThrownBy(
+            () ->
+                authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(
+                    signedChallenge))
+        .isInstanceOf(RuntimeException.class);
+  }
+
+  @Test
+  void checkSignatureNjwt_challengeOutdated() {
+    authenticationChallenge =
+        authenticationChallengeBuilder.buildAuthenticationChallenge(
+            "goo", "foo", "bar", "schmar", IdpScope.EREZEPT.getJwtValue(), "nonceValue");
+    final JsonWebToken jsonWebToken = authenticationChallenge.getChallenge();
+    final IdpJwtProcessor reSignerProcessor = new IdpJwtProcessor(serverIdentity);
+    final JwtBuilder jwtDescription = jsonWebToken.toJwtDescription();
+    jwtDescription.expiresAt(ZonedDateTime.now().minusSeconds(1));
+    authenticationChallenge.setChallenge(reSignerProcessor.buildJwt(jwtDescription));
+
+    final AuthenticationResponse authenticationResponse =
+        authenticationResponseBuilder.buildResponseForChallenge(
+            authenticationChallenge, clientIdentity);
+    JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
+    assertThat(signedChallenge).isNotNull();
+
+    assertThatThrownBy(
+            () ->
+                authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(
+                    signedChallenge))
+        .isInstanceOf(RuntimeException.class);
+  }
+
+  @Test
+  void checkSignedChallenge_invalidAlgoInJws() {
+    final AuthenticationResponse authenticationResponse =
+        buildInvalidResponseForChallenge(authenticationChallenge, rsaClientIdentity);
+    JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
+    assertThat(signedChallenge).isNotNull();
+
+    assertThatThrownBy(
+            () ->
+                authenticationChallengeVerifier.verifyResponseAndThrowExceptionIfFail(
+                    signedChallenge))
+        .isInstanceOf(ChallengeSignatureInvalidException.class);
+  }
+
+  private AuthenticationResponse buildInvalidResponseForChallenge(
+      final AuthenticationChallenge authenticationChallenge, final PkiIdentity clientIdentity) {
+    final JwtClaims claims = new JwtClaims();
+    claims.setClaim(
+        ClaimName.NESTED_JWT.getJoseName(), authenticationChallenge.getChallenge().getRawString());
+
+    final JsonWebSignature jsonWebSignature = new JsonWebSignature();
+    jsonWebSignature.setPayload(claims.toJson());
+
+    jsonWebSignature.setAlgorithmHeaderValue(RSA_USING_SHA256);
+    jsonWebSignature.setKey(clientIdentity.getPrivateKey());
+
+    jsonWebSignature.setHeader("typ", "JWT");
+    jsonWebSignature.setHeader("cty", "NJWT");
+    jsonWebSignature.setCertificateChainHeaderValue(clientIdentity.getCertificate());
+
+    try {
+      final String compactSerialization = jsonWebSignature.getCompactSerialization();
+      return AuthenticationResponse.builder()
+          .signedChallenge(new JsonWebToken(compactSerialization))
+          .build();
+    } catch (final JoseException e) {
+      throw new RuntimeException(e);
     }
-
-    @Test
-    void checkSignatureNjwt_challengeOutdated() {
-        authenticationChallenge = authenticationChallengeBuilder
-            .buildAuthenticationChallenge("goo", "foo", "bar", "schmar", IdpScope.EREZEPT.getJwtValue(), "nonceValue");
-        final JsonWebToken jsonWebToken = authenticationChallenge.getChallenge();
-        final IdpJwtProcessor reSignerProcessor = new IdpJwtProcessor(serverIdentity);
-        final JwtBuilder jwtDescription = jsonWebToken.toJwtDescription();
-        jwtDescription.expiresAt(ZonedDateTime.now().minusSeconds(1));
-        authenticationChallenge.setChallenge(reSignerProcessor.buildJwt(jwtDescription));
-
-        final AuthenticationResponse authenticationResponse =
-            authenticationResponseBuilder.buildResponseForChallenge(authenticationChallenge,
-                clientIdentity);
-        JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
-        assertThat(signedChallenge).isNotNull();
-
-        assertThatThrownBy(() -> authenticationChallengeVerifier
-            .verifyResponseAndThrowExceptionIfFail(signedChallenge))
-            .isInstanceOf(RuntimeException.class);
-    }
-
-    @Test
-    void checkSignedChallenge_invalidAlgoInJws() {
-        final AuthenticationResponse authenticationResponse =
-            buildInvalidResponseForChallenge(authenticationChallenge,
-                rsaClientIdentity);
-        JsonWebToken signedChallenge = authenticationResponse.getSignedChallenge();
-        assertThat(signedChallenge).isNotNull();
-        
-        assertThatThrownBy(() ->
-            authenticationChallengeVerifier
-                .verifyResponseAndThrowExceptionIfFail(signedChallenge)).isInstanceOf(
-            ChallengeSignatureInvalidException.class);
-    }
-
-    private AuthenticationResponse buildInvalidResponseForChallenge(
-        final AuthenticationChallenge authenticationChallenge,
-        final PkiIdentity clientIdentity) {
-        final JwtClaims claims = new JwtClaims();
-        claims.setClaim(ClaimName.NESTED_JWT.getJoseName(), authenticationChallenge.getChallenge().getRawString());
-
-        final JsonWebSignature jsonWebSignature = new JsonWebSignature();
-        jsonWebSignature.setPayload(claims.toJson());
-
-        jsonWebSignature.setAlgorithmHeaderValue(RSA_USING_SHA256);
-        jsonWebSignature.setKey(clientIdentity.getPrivateKey());
-
-        jsonWebSignature.setHeader("typ", "JWT");
-        jsonWebSignature.setHeader("cty", "NJWT");
-        jsonWebSignature.setCertificateChainHeaderValue(clientIdentity.getCertificate());
-
-        try {
-            final String compactSerialization = jsonWebSignature.getCompactSerialization();
-            return AuthenticationResponse.builder()
-                .signedChallenge(new JsonWebToken(compactSerialization))
-                .build();
-        } catch (final JoseException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
+  }
 }
